SIGSEGV renaissance