@@ -8,13 +8,13 @@
     :plugins [[lein-try "0.4.3"]]
 ;   :global-vars {*warn-on-reflection* true}
     :jvm-opts ["-Xmx6g"
-;                   "--add-exports=jdk.internal.vm.ci/jdk.vm.ci.amd64=ALL-UNNAMED"
-                    "--add-exports=jdk.internal.vm.ci/jdk.vm.ci.code=ALL-UNNAMED"
-                    "--add-exports=jdk.internal.vm.ci/jdk.vm.ci.code.site=ALL-UNNAMED"
-                    "--add-exports=jdk.internal.vm.ci/jdk.vm.ci.hotspot=ALL-UNNAMED"
-;                   "--add-exports=jdk.internal.vm.ci/jdk.vm.ci.hotspot.amd64=ALL-UNNAMED"
-;                   "--add-exports=jdk.internal.vm.ci/jdk.vm.ci.meta=ALL-UNNAMED"
-;                   "--add-exports=jdk.internal.vm.ci/jdk.vm.ci.runtime=ALL-UNNAMED"
+;                   "--add-opens=jdk.internal.vm.ci/jdk.vm.ci.amd64=ALL-UNNAMED"
+                    "--add-opens=jdk.internal.vm.ci/jdk.vm.ci.code=ALL-UNNAMED"
+                    "--add-opens=jdk.internal.vm.ci/jdk.vm.ci.code.site=ALL-UNNAMED"
+                    "--add-opens=jdk.internal.vm.ci/jdk.vm.ci.hotspot=ALL-UNNAMED"
+;                   "--add-opens=jdk.internal.vm.ci/jdk.vm.ci.hotspot.amd64=ALL-UNNAMED"
+;                   "--add-opens=jdk.internal.vm.ci/jdk.vm.ci.meta=ALL-UNNAMED"
+                    "--add-opens=jdk.internal.vm.ci/jdk.vm.ci.runtime=ALL-UNNAMED"
                "-XX:+UnlockExperimentalVMOptions"
                "-XX:+EnableJVMCI"]
     :javac-options ["-g"
@@ -25,7 +25,7 @@
                     "--add-exports=jdk.internal.vm.ci/jdk.vm.ci.hotspot=ALL-UNNAMED"
 ;                   "--add-exports=jdk.internal.vm.ci/jdk.vm.ci.hotspot.amd64=ALL-UNNAMED"
 ;                   "--add-exports=jdk.internal.vm.ci/jdk.vm.ci.meta=ALL-UNNAMED"
-;                   "--add-exports=jdk.internal.vm.ci/jdk.vm.ci.runtime=ALL-UNNAMED"
+                    "--add-exports=jdk.internal.vm.ci/jdk.vm.ci.runtime=ALL-UNNAMED"
                    ]
     :source-paths ["src"] :java-source-paths ["src"] :resource-paths ["resources"] :test-paths ["src"]
 ;   :main arbace.core
